--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3.7"
 services:
+  react:
+    image: node:latest
+    command: npm start
+    working_dir: /app
+    volumes:
+      - ./ghi/app:/app
+    environment:
+      - HOST=0.0.0.0
+      - PORT=3001
+      - NODE_ENV=development
+    ports:
+      - "3001:3001"
   monolith:
     build:
       context: ./monolith
@@ -93,5 +105,6 @@ services:
       - POSTGRES_PASSWORD=test-databases
     ports:
       - 15432:5432
+
 volumes:
   pgdata:
